# arkworks_groth16_webapp

./: Cargo.toml  arkworks_groth16_frontend.js  index.html  main.js  readme.md  style.css
src/: lib.rs
