[package]
name = "arkworks_groth16_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.3"
serde_json = "1.0"
ark-bls12-381 = "0.4.0"
ark-groth16 = "0.3.0"
ark-relations = "0.3.0"
ark-std = "0.4.0"
ark-ff = "0.3.0"
ark-bn254 = "0.3.0"
ark-serialize = "^0.3.0"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"
features = ["console"]

